<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen"
    android:background="@color/background">


    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="183dp"
        android:layout_height="169dp"
        android:src="@drawable/icon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/temper"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/temper"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/pascal"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/pascal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <TextView
        android:id="@+id/scorost"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/scorost"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

    <TextView
        android:id="@+id/nameofcity1"
        android:layout_width="197dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <TextView
        android:id="@+id/temper1"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/pascal1"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <TextView
        android:id="@+id/scorost1"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

    <EditText
        android:id="@+id/city"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:background="@drawable/text"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/thisis18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:onClick="goon"
        android:text="@string/weather"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />


</androidx.constraintlayout.widget.ConstraintLayout>